# Banking-system-simulator

./: AESBankAccounts.txt  CMakeLists.txt  GUI.cpp  README.md  function.c  functions.h  init.c  main.c  main.h  menu.c
